--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 23/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 298 points<br>
+Unlocked 23/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 305 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -73,6 +73,7 @@ Unlocked 23/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 296 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Miller (Level 5)</div>  <div class="info">Add only part of a file to the stage 386 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
+<li><div class="title">Miller (Level 6)</div>  <div class="info">Add only part of a file to the stage 439 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -89,26 +90,26 @@ Unlocked 23/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6278 status
-   5284 symbolic-ref
-    380 add
-    331 diff
-    300 commit
-    189 checkout
-     78 svn
-     77 branch
-     72 stash
+   6801 status
+   5710 symbolic-ref
+    433 add
+    406 diff
+    342 commit
+    195 checkout
+     81 svn
+     79 branch
+     74 stash
      62 mv
      42 push
      41 rebase
-     34 rm
-     27 reset
+     37 rm
+     30 reset
      21 fetch
      16 log
-     13 help
+     14 help
      11 achievements
+     10 clone
       9 tag
-      9 clone
       8 remote
       7 reflog
       6 merge
@@ -119,6 +120,7 @@ Git commands sorted by usage:
       2 show
       2 blame
       1 submodule
+      1 shortlog
       1 pull
       1 Mon
       1 gc
