--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Joris Kraak's Git Achievements <img src='http://www.gravatar.com/avatar/e8419ba6a2d78def12cf72b445df988f'/></h2>
-Unlocked 24/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 314 points<br>
+Unlocked 24/51 <a href="http://github.com/bauglir/git-achievements">Git Achievements</a> for 319 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -80,6 +80,7 @@ Unlocked 24/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -93,22 +94,22 @@ Unlocked 24/51 <a href="http://github.com/bauglir/git-achievements">Git Achievem
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   7164 status
-   6031 symbolic-ref
-    445 add
-    415 diff
-    352 commit
-    210 checkout
-     98 branch
-     92 svn
+   7292 status
+   6141 symbolic-ref
+    447 add
+    418 diff
+    356 commit
+    215 checkout
+    103 branch
+     94 svn
      74 stash
      63 mv
-     44 push
+     45 push
      43 rebase
      39 rm
      31 reset
      27 fetch
-     19 remote
+     20 remote
      16 log
      14 help
      11 init
@@ -118,16 +119,17 @@ Git commands sorted by usage:
       8 merge
       7 reflog
       5 cherry-pick
+      4 show
       4 config
       3 Wed
       2 Thu
-      2 show
       2 blame
       1 submodule
       1 shortlog
       1 pull
       1 Mon
       1 gc
+      1 format-patch
 </pre>
 <script type="text/javascript">
 function showLocked() {
